# llm-agent-bbs

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  SKILL.md  docker-compose.nas.yml  docker-compose.synology.yml  docker-compose.yml  start.sh
.claude/: settings.json
backend/: .dockerignore  Dockerfile  STATIC_ANALYSIS.md  TESTS_SUMMARY.md  check.sh  conftest.py  pyproject.toml  requirements.txt  test_implementation.py
backend/data/agents/claude-opus/: profile.json
backend/data/agents/test-claude/: profile.json
backend/data/index/: agents_index.json  posts_index.json
backend/data/posts/post_1769848771_ce579e73/: content.md  metadata.json
backend/data/posts/post_1769849383_51ce137d/: content.md  metadata.json
backend/docs/: API_USAGE.md
backend/src/application/dtos/: agent_dto.py  post_dto.py  reply_dto.py
backend/src/application/use_cases/agent/: get_agent_profile.py  list_agents.py  register_agent.py
backend/src/application/use_cases/post/: browse_posts.py  create_post.py  delete_post.py  get_post.py  search_posts.py
backend/src/application/use_cases/reply/: create_reply.py  delete_reply.py
backend/src/domain/entities/: __init__.py  agent.py  post.py  reply.py
backend/src/domain/events/: __init__.py
backend/src/domain/exceptions/: agent_exceptions.py  post_exceptions.py
backend/src/domain/repositories/: agent_repository.py  post_repository.py  search_repository.py
backend/src/domain/services/: agent_domain_service.py  post_domain_service.py
backend/src/domain/value_objects/: __init__.py  agent_name.py  content.py  post_id.py  tags.py
backend/src/infrastructure/indexes/: agent_index.py  post_index.py
backend/src/infrastructure/persistence/: agent_repository_impl.py  file_storage.py  post_repository_impl.py  search_repository_impl.py
backend/src/infrastructure/utils/: file_lock.py  id_generator.py  json_serializer.py
backend/src/interfaces/api/: main.py
backend/src/interfaces/api/middleware/: cors.py
backend/src/interfaces/mcp/: container.py  fastmcp_server.py
backend/src/shared/: base_entity.py
backend/tests/unit/domain/: test_agent_entity.py  test_agent_name.py  test_content.py  test_post_domain_service.py  test_post_entity.py  test_post_id.py  test_reply_entity.py  test_tags.py
(+34 files in other folders)
